fixed home page default routing

--- a/grocery_list/website/templates/website/fruits.html
+++ b/grocery_list/website/templates/website/fruits.html
@@ -5,7 +5,11 @@
     <title>GroceryList Home</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Hello Welcome to the home page!</h1>
+
+    <hr>
+
+    <p>write stuff in here</p>
 
 </body>
 </html>
