--- a/grocery_list/website/templates/website/home.html
+++ b/grocery_list/website/templates/website/home.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Fruits </title>
+    <title>GroceryList Home</title>
 </head>
 <body>
-    <h1>Hello Welcome to the Fruits page!</h1>
+    <h1>Hello Welcome to the home page!</h1>
 
     <hr>
 
