templates were worked on
worked on placing data in templates

--- a/grocery_list/website/templates/website/home.html
+++ b/grocery_list/website/templates/website/home.html
@@ -7,9 +7,18 @@
 <body>
     <h1>Hello Welcome to the home page!</h1>
 
-    <hr>
+    <br>
+ {% block content %}
+  
 
-    <p>write stuff in here</p>
+    <p>please select a {{Fruits.name}}</p>
+
+ {% endblock content %}
+    
+
+    
+
+    
 
 </body>
 </html>
