--- a/grocery_list/website/templates/website/fruits.html
+++ b/grocery_list/website/templates/website/fruits.html
@@ -2,15 +2,28 @@
 
 {% block content %}
 
-    <ul>
 
-    {% for f in fruit %}
-        <li>{{f.name}}</li>
-        <li>{{f.quantity}}</li>
-    {% endfor %}
+
+        <table class="table table-dark">
+        <tr>
+            <th>Name</th>
+            <th>Quantity</th>
+   
+        {% for f in fruit %}
+                <tr>
+                 <td>{{f.name}}</td>
+                
+            
+                 <td>{{f.quantity}}</td>
+                </tr>
+            
+
+        {% endfor %}
+    </div>    
+
+            
+
+
+        
     
-    </ul>
-
-
-
 {% endblock  %}
