--- a/grocery_list/website/templates/website/home.html
+++ b/grocery_list/website/templates/website/home.html
@@ -1,3 +1,7 @@
+{% load static %}
+<link rel=”stylesheet” href=”{% static 'website/styles.css' %}”>
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,13 +13,16 @@
     <title>GroceryList Home</title>
 </head>
 <body>
-    <div class="container">
-    <h1>Hello {{user.username}} Welcome to your GroceryList!</h1>
+    <div class="container-md" id="head">
+       
+            <h1>Hello {{user.username}}, Welcome to your GroceryList!</h1>
+        
     </div>
     <hr style="border: 10px solid blue">
+    
 
 
-    <div class="container">
+    <div class="container-md">
         {% block content %} 
         {% endblock content %}
 
