--- a/grocery_list/website/templates/website/home.html
+++ b/grocery_list/website/templates/website/home.html
@@ -23,8 +23,28 @@
 
 
     <div class="container-md">
-        {% block content %} 
-        {% endblock content %}
+        <table class="table table-dark">
+        <tr>
+            <th>Name</th>
+            <th>Quantity</th>
+   
+        {% for f in fruits %}
+                <tr>
+                 <td>{{f.name}}</td>
+                
+            
+                 <td>{{f.quantity}}</td>
+                </tr>
+            
+
+        {% endfor %}
+        </table>
+
+        <form action="/addItem/" method="post">{% csrf_token %}
+        <input type="text" name="name"/>
+        <input type="submit" value="Add Item"/>
+        </form>
+
 
     </div>
 
