--- a/grocery_list/website/templates/website/home.html
+++ b/grocery_list/website/templates/website/home.html
@@ -24,26 +24,33 @@
 
     <div class="container-md">
         <table class="table table-dark">
+
         <tr>
             <th>Name</th>
             <th>Quantity</th>
-   
-        {% for f in fruits %}
+            <th>Modify</th>
+        </tr>
+
+                {% for f in fruits %}
                 <tr>
                  <td>{{f.name}}</td>
-                
-            
+
                  <td>{{f.quantity}}</td>
+                 <td><a href="{% url 'Update Item' f.id %}">Update</a></td>
+                 <td><a href="{% url 'delete' f.id %}">Delete</a></td>
                 </tr>
             
 
         {% endfor %}
-        </table>
 
-        <form action="/addItem/" method="post">{% csrf_token %}
-        <input type="text" name="name"/>
-        <input type="submit" value="Add Item"/>
+        </table>
+        <form method="post" action="/">
+            {% csrf_token %}
+            {{form}}
+            <input type="submit" name="create item">
         </form>
+
+
 
 
     </div>
