--- a/grocery_list/website/templates/website/home.html
+++ b/grocery_list/website/templates/website/home.html
@@ -12,7 +12,7 @@
     
     <title>GroceryList Home</title>
 </head>
-<body>
+<body id="body">
     <div class="container-md" id="head">
        
             <h1>Hello {{user.username}}, Welcome to your GroceryList!</h1>
@@ -22,36 +22,37 @@
     
 
 
-    <div class="container-md">
-        <table class="table table-dark">
+    <div class="container">
+        
+            <table class="table table-sm">
 
-        <tr>
-            <th>Name</th>
-            <th>Quantity</th>
-            <th>Modify</th>
-        </tr>
+                <thead class="thead-dark">
+                    <tr>
+                    <th>Name</th>
+                    <th>Quantity</th>
+                    <th>Modify</th>
+                    </tr>
+                </thead>
 
                 {% for f in fruits %}
-                <tr>
-                 <td>{{f.name}}</td>
+                    <tr>
+                    <td style="text-transform: uppercase; font-style:italic; font-size: 18pt">{{f.name}}</td>
 
-                 <td>{{f.quantity}}</td>
-                 <td><a href="{% url 'Update Item' f.id %}">Update</a></td>
-                 <td><a href="{% url 'delete' f.id %}">Delete</a></td>
-                </tr>
-            
+                    <td>{{f.quantity}}</td>
+                    <td><a class="btn-sm btn-primary" href="{% url 'update_item' f.id %}">Update</a>
+                    <a class ="btn-sm btn-danger" href="{% url 'delete' f.id %}">Delete</a></td>
+                    </tr>
+                {% endfor %}
 
-        {% endfor %}
-
-        </table>
+            </table>
+        
+        
         <form method="post" action="/">
             {% csrf_token %}
+            
             {{form}}
-            <input type="submit" name="create item">
+            <input class="btn-sm btn-success" type="submit" value="Add" name="create item">
         </form>
-
-
-
 
     </div>
 
