--- a/grocery_list/website/templates/website/home.html
+++ b/grocery_list/website/templates/website/home.html
@@ -1,5 +1,5 @@
-{% load static %}
-<link rel=”stylesheet” href=”{% static 'website/styles.css' %}”>
+
+
 
 
 <!DOCTYPE html>
@@ -11,8 +11,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     
     <title>GroceryList Home</title>
+    <style>
+    #head {
+    padding-bottom: 3px;
+    text-align: center;
+    background-color: gray;
+    font-size: larger;
+    color: limegreen;
+    }
+    </style>
 </head>
-<body id="body">
+<body>
     <div class="container-md" id="head">
        
             <h1>Hello {{user.username}}, Welcome to your GroceryList!</h1>
