--- a/grocery_list/website/templates/website/deleteItem.html
+++ b/grocery_list/website/templates/website/deleteItem.html
@@ -5,24 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Title</title>
+    <title>Delete Item</title>
+
+    <style>
+        body {
+            background-color: lightgray;
+            margin: 50px;
+        }
+
+        h4 {
+            color: red;
+            font-style: italic;
+            text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+        }
+
+        #container {
+            padding: 20px;
+            border: solid black 5px; 
+            text-align: center;
+            overflow: hidden;
+            box-shadow: 10px 10px;
+        }
+
+       #row {
+           float: right;
+        }
+
+
+    </style>
 </head>
 <body>
 
 
 
-    <div class="container">
-    <h3>Are you sure you want to delete "{{item}}"?</h3>
+    <div class="container" id="container">
+        
+        <h4>Are you sure you want to delete "{{item}}"?</h4>
 
-        <div class="row">
+        <div class="container">
 
-    <a class="btn-lg btn-warning" href="{% url 'home' %}">Cancel</a>&nbsp;
+            <div class="row" id="row">
 
-    <form method="post" action="">
-     {% csrf_token %}
-      {{form}}
-        <input class="btn-lg btn-danger" type="submit" name="confirm" value="Delete">
-    </form>
+             <form method="post" action="">
+                <a class="btn btn-primary" href="{% url 'home' %}">Cancel</a>
+                {% csrf_token %}
+                {{form}}
+                <input class="btn btn-danger" type="submit" name="confirm" value="Delete">
+             </form>
+
+             </div>
         </div>
     
     </div>
