--- a/grocery_list/website/templates/website/home.html
+++ b/grocery_list/website/templates/website/home.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,58 +6,78 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     
-    <title>GroceryList Home</title>
+    <title>Grocery List </title>
+    
     <style>
-    #head {
-    padding-bottom: 3px;
-    text-align: center;
-    background-color: gray;
-    font-size: larger;
-    color: limegreen;
-    }
+
+        body {
+            background-color: lightgray;
+            margin: 50px;
+        }
+        #head {
+            padding-bottom: 3px;
+            text-align: center;
+            background-color: black;
+            font-size: larger;
+            color: limegreen;
+        }
+
+        #container {
+            border: solid black 5px;
+            padding: 10px;
+            box-shadow: 10px 10px; 
+        }
+
+        #table {
+            border: solid black 2px;
+            
+        }
     </style>
+
 </head>
 <body>
     <div class="container-md" id="head">
        
-            <h1>Hello {{user.username}}, Welcome to your GroceryList!</h1>
+            <h1>Welcome to your Grocery List!</h1>
         
     </div>
-    <hr style="border: 10px solid blue">
+    
     
 
 
-    <div class="container">
+    <div class="container" id="container">
         
-            <table class="table table-sm">
+            <table class="table table-md" id="table">
 
                 <thead class="thead-dark">
                     <tr>
                     <th>Name</th>
                     <th>Quantity</th>
-                    <th>Modify</th>
+                    <th>Actions</th>
                     </tr>
                 </thead>
 
                 {% for f in fruits %}
                     <tr>
-                    <td style="text-transform: uppercase; font-style:italic; font-size: 18pt">{{f.name}}</td>
+                        <td style="text-transform: uppercase; font-style:italic; font-size: 18pt">{{f.name}}</td>
 
-                    <td>{{f.quantity}}</td>
-                    <td><a class="btn-sm btn-primary" href="{% url 'update_item' f.id %}">Update</a>
-                    <a class ="btn-sm btn-danger" href="{% url 'delete' f.id %}">Delete</a></td>
+                        <td style="text-transform: uppercase; font-style:italic; font-size: 18pt">{{f.quantity}}</td>
+                        <td>
+                            <a class="btn-sm btn-primary" href="{% url 'update_item' f.id %}">Update</a>
+                            <a class ="btn-sm btn-danger" href="{% url 'delete' f.id %}">Delete</a>
+                        </td>
                     </tr>
                 {% endfor %}
 
             </table>
         
         
-        <form method="post" action="/">
-            {% csrf_token %}
-            
-            {{form}}
-            <input class="btn-sm btn-success" type="submit" value="Add" name="create item">
-        </form>
+            <form method="post" action="/">
+                {% csrf_token %}
+                
+                {{form}}
+                <input class="btn-sm btn-success" type="submit" value="Add" name="create item">
+            </form>
 
     </div>
 
