fixed deteitem page

--- a/grocery_list/website/templates/website/deleteItem.html
+++ b/grocery_list/website/templates/website/deleteItem.html
@@ -40,7 +40,7 @@
 
     <div class="container" id="container">
         
-        <h4>Are you sure you want to delete "{{item}}"?</h4>
+        <h4>Are you sure you want to delete "{{item|upper}}"?</h4>
 
         <div class="container">
 
